syntax = "proto3";
package room;
option go_package = "./proto";

message User {
  string userId = 1;
  string display_name = 2;
}

message Message {
  string roomId = 1;
  User user = 2;
  string message = 3;
  string timestamp = 4;
}

message Room {
  string roomId = 1;
  string name = 2;
  repeated User members = 3;
  repeated Message messages = 4;
}

// 채팅룸 관련 요청 메시지
message RoomRequest {
  enum Action {
    CREATE = 0;
    JOIN = 1;
    LEAVE = 2;
  }
  User user = 1;
  Action action = 2;
  Room room = 3;
}

// 채팅룸 관련 응답 메시지
message RoomResponse {
  enum Status {
    SUCCESS = 0;
    FAILURE = 1;
  }

  Status status = 1;
  string message = 2;
  Room room = 3;
}

message RoomList {
  repeated Room room_list = 1;
}

message Close{}

service RoomService {

  rpc GetRoomList(RoomRequest) returns (RoomList);
  rpc CreateRoom(RoomRequest) returns (RoomResponse);
  rpc JoinRoom(RoomRequest) returns (RoomResponse);


  rpc CreateStream(RoomRequest) returns (stream Message);
  rpc BroadcastMessage(Message) returns (Close);


  rpc LeaveRoom(RoomRequest) returns (RoomResponse);

}